tree-sitter-psl/test/corpus/extended.txt
================================================================================
Parameterized next with count
================================================================================

assert next[2] ack;

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    (unary_temporal
      (temporal_unary_op)
      (temporal_count
        (integer))
      (identifier))))

================================================================================
Parameterized next_a with range
================================================================================

assert next_a[1 to 4] ack;

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    (unary_temporal
      (temporal_unary_op)
      (temporal_count
        (integer)
        (integer))
      (identifier))))

================================================================================
next_event property
================================================================================

assert next_event(valid)(ack);

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (next_event_property
      event: (identifier)
      operand: (identifier))))

================================================================================
next_event with count
================================================================================

assert next_event_a(valid)[2](ack);

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (next_event_property
      event: (identifier)
      (temporal_count
        (integer))
      operand: (identifier))))

================================================================================
forall simple
================================================================================

assert forall x : always x;

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (replicated_property
      param: (identifier)
      property: (unary_temporal
        operator: (temporal_unary_op)
        operand: (identifier)))))

================================================================================
forall with range
================================================================================

assert forall n in {0 to 7} : always (n >= 0);

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (replicated_property
      param: (identifier)
      (integer)
      (integer)
      property: (unary_temporal
        operator: (temporal_unary_op)
        operand: (paren_expression
          (binary_expression
            left: (identifier)
            right: (integer)))))))

================================================================================
SERE union
================================================================================

cover {req union grant};

--------------------------------------------------------------------------------

(source_file
  (cover_directive
    (braced_sere
      (sere_union
        (identifier)
        (identifier)))))

================================================================================
Sequence as FL property (braced SERE assert)
================================================================================

assert {a; b};

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    (braced_sere
      (sere_concat
        (identifier)
        (identifier)))))

================================================================================
Strong sequence
================================================================================

assert {req; ack}!;

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    (strong_sequence
      (braced_sere
        (sere_concat
          (identifier)
          (identifier))))))

================================================================================
VHDL downto slice
================================================================================

assert always (data(7 downto 0) = x"FF");

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    (unary_temporal
      (temporal_unary_op)
      (paren_expression
        (binary_expression
          (indexed_name
            (identifier)
            (range_constraint
              (integer)
              (integer)))
          (bit_string_literal))))))

================================================================================
Const parameter as count
================================================================================

property p (const n) is always (req -> next[n] ack);

--------------------------------------------------------------------------------

(source_file
  (declaration
    (property_declaration
      name: (identifier)
      (formal_parameter_list
        (formal_parameter
          (identifier)))
      definition: (unary_temporal
        operator: (temporal_unary_op)
        operand: (paren_property
          (logical_implication
            left: (identifier)
            right: (unary_temporal
              operator: (temporal_unary_op)
              (temporal_count
                (identifier))
              operand: (identifier))))))))

================================================================================
Identifier in repetition range
================================================================================

assert {valid[*2 to depth]};

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (braced_sere
      (sere_repetition
        (identifier)
        (repeat_count
          (integer)
          (identifier))))))

================================================================================
Upper-case keywords (PSL is case-insensitive)
================================================================================

VUNIT u (top) {
  DEFAULT CLOCK IS rising_edge(clk);
  ASSERT ALWAYS (req -> EVENTUALLY! grant);
}

--------------------------------------------------------------------------------

(source_file
  (verification_unit
    name: (identifier)
    (hdl_unit_binding
      hdl_unit: (identifier))
    (default_clock
      clock: (indexed_name
        (identifier)
        (identifier)))
    (assert_directive
      property: (unary_temporal
        operator: (temporal_unary_op)
        operand: (paren_property
          (logical_implication
            left: (identifier)
            right: (unary_temporal
              operator: (temporal_unary_op)
              operand: (identifier))))))))

================================================================================
Mixed-case keywords
================================================================================

Assert Always Req;

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (unary_temporal
      operator: (temporal_unary_op)
      operand: (identifier))))

================================================================================
Single letters are ordinary identifiers, not LTL operators
================================================================================

assert always (X and F and G and U and W);

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (unary_temporal
      operator: (temporal_unary_op)
      operand: (paren_expression
        (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (binary_expression
                left: (identifier)
                right: (identifier))
              right: (identifier))
            right: (identifier))
          right: (identifier))))))

================================================================================
Severity clause
================================================================================

assert always a report "boom" severity failure;

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (unary_temporal
      operator: (temporal_unary_op)
      operand: (identifier))
    (report_clause
      (string_literal))
    (severity_clause)))

================================================================================
ended() with an inline braced SERE
================================================================================

assert always ended({a; b});

--------------------------------------------------------------------------------

(source_file
  (assert_directive
    property: (unary_temporal
      operator: (temporal_unary_op)
      operand: (builtin_call
        function: (builtin_function)
        (braced_sere
          (sere_concat
            (identifier)
            (identifier)))))))

================================================================================
Inherit and override declarations
================================================================================

vunit u (top) {
  nontransitive inherit base1, base2;
  override sig1;
  endpoint e is {a; b};
}

--------------------------------------------------------------------------------

(source_file
  (verification_unit
    name: (identifier)
    (hdl_unit_binding
      hdl_unit: (identifier))
    (inherit_declaration
      (identifier)
      (identifier))
    (override_declaration
      (identifier))
    (declaration
      (endpoint_declaration
        name: (identifier)
        definition: (braced_sere
          (sere_concat
            (identifier)
            (identifier)))))))
